[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/day_transition.gd" type="Script" id=1]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="CorrectScene" type="Timer" parent="."]
wait_time = 0.5

[node name="DayTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="CorrectScene" to="." method="_on_CorrectScene_timeout"]
[connection signal="timeout" from="DayTimer" to="." method="_on_DayTimer_timeout"]
